--- a/css/steps.less
+++ b/css/steps.less
@@ -22,18 +22,19 @@
 }
 
 .steps-bar {
-    list-style: none; padding: 0; display: flex; flex-wrap: flex;
+    list-style: none; padding: 0; display: flex;
 
     &:not([class*="ui-"]) { color: @green; }
     li {
         font-size: @x-small; line-height: normal; text-align: center; position: relative; flex-grow: 1;
 
+        html:not(.ie) & { flex-basis: 100%; }
         &:before {
             content: ""; font-weight: @font-bold; font-size: @x-small; text-align: center; ._bg-var(body-bg); width: @steps-active-size; height: @steps-active-size; margin: @steps-margin-v auto; display: block; border: @steps-line-size solid @no-color; border-radius: 50%; position: relative; z-index: 1;
 
             .card & { ._bg-var(card-bg); }
         }
-        &:after { content: ""; width: 100%; height: @steps-line-size; background-color: @green; position: absolute; top: @steps-margin-v + (@steps-active-size - @steps-line-size) / 2; left: calc(-50% - (@steps-active-size / 2)); opacity: @icon-sub-opacity; }
+        &:after { content: ""; width: 100%; height: @steps-line-size; background-color: @green; position: absolute; top: @steps-margin-v + (@steps-active-size - @steps-line-size) / 2; left: -50%; opacity: @icon-sub-opacity; }
         &:first-child {
             &:after { content: none; }
         }
